# roxy-launcher

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  index.html  rust-toolchain
assets/: sw.js
src/: app.rs  error.rs  game.rs  language.rs  lib.rs  main.rs  profile.rs  utils.rs
src/core/: action_handle.rs  boot.rs  mod.rs
src/core/action_handle/: toolbar.rs
src/core/action_handle/dialog/: create_profile.rs  mod.rs
src/core/data_struct/: StsMod.rs  mod.rs
src/language/: boot.rs  default.rs  element.rs  get.rs  load.rs  save.rs
src/profile/: load.rs  save.rs
src/ui/: instance_grid.rs  mod.rs  side_bar.rs  toolbar.rs
src/ui/dialogs/: create_profile.rs  mod.rs
src/utils/: logger_util.rs  path_util.rs  string_util.rs
