[package]
name = "roxy-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["glow"] }
log = "0.4.27"
# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
tap = "1.0"
open = "5"
fs_extra = "1.3"
egui-notify = "0.22"
