
[package]
name = "roxy-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["glow"] }
tokio = { version = "1.52.2", features = ["full"] }
# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
open = "5"
fs_extra = "1.3"
egui-notify = "0.22"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3"
