[package]
name = "roxy-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["glow"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
serde_yaml = "0.9"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
open = "5.3.0"
fs_extra = "1.3"
thiserror = "2.0.16"
egui-notify = "0.21.0"
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = "0.4.41"
toml = "0.9.5"
egui_extras = { version = "0.34.1", features = ["all_loaders"] }
image = { version = "0.25", features = ["png", "jpeg"] }
url = "2.5.7"

[dev-dependencies]
tempfile = "3.20.0"
